# rpc-monitor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config-ap-southeast.sh  config-eu-central.sh  config-us-east.sh  config.sh  deploy.sh  monitor.sh  monitor.toml  report.sh  report_tender2.sh  report_tender3.sh  zone.sh  zone.sh.example
deploy/: rpc-monitor.service  rpc-monitor.timer
src/: main.rs
